hphp/hack/test/typecheck/case_type/recursive/subtyping_simple1c.php.exp
ERROR: File "subtyping_simple1c.php", line 4, characters 11-11:
Invalid constraint on `newtype` (Typing[4332])
  File "subtyping_simple1c.php", line 4, characters 16-21:
  Expected `string`
  File "subtyping_simple1c.php", line 4, characters 25-25:
  But got `mixed`. Using `mixed` instead of A because this is an illegal recursive use of A in the definition of A
ERROR: File "subtyping_simple1c.php", line 4, characters 11-11:
This recursive case type is not supported. `A` should not be at the top-level. (Typing[4485])
